# plug-and-play-strategies

./: .gitignore  README.md  pyproject.toml
BollingerBands_RSI/: README.md  bb_rsi.py  config.py
Dollar_Cost_Average/: dollar_cost_average.ipynb
LSTM/: README.md  config.py  lstm.py
Pairs_Trading/: pairs_trading.ipynb
Reddit_Sentiment_Analysis/: config.py  reddit.py
Scalping/: README.md  scalping.py
Super_Trend_Indicator/: strategy_config.py  supertrend.py  supertrend_indicator.ipynb
Triangular_Arbitrage/: config.py  triarb.py
Twitter_Sentiment_Analysis/: twitter_sentiment.ipynb
Websocket_Momentum_Trading/: websocket_momentum.ipynb
dex_cex_arbitrage/: config.py  dex_cex_arb.py
