[tool.poetry]
name = "algo-framework"
version = "0.1.0"
description = ""
authors = ["haxdds"]

[tool.poetry.dependencies]
python = "^3.7.1"
python-dotenv = "^0.21.1"
alpaca-py = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
